--- a/petrgAPI.csproj
+++ b/petrgAPI.csproj
@@ -13,5 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.1"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.1"/>
+    <PackageReference Include="FluentResults" Version="3.15.1"/>
   </ItemGroup>
 </Project>
